--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8888
+spring.thymeleaf.encoding=UTF-8
+spring.messages.encoding=UTF-8
+server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
